--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Custom */
+    "noImplicitOverride": true
   },
   "include": ["src"]
 }
