--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Custom */
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+    "typeRoots": ["node_modules/@types", "src/@types"]
   },
   "include": ["src"]
 }
